--- a/index.html
+++ b/index.html
@@ -1,12 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Practice table</table></title>  
+</head>    
 <body>
-    <p>Test Website</p>
+ 
+    <table border="2px">
+        <tr>
+            <th width="300">age (year)</th>
+            <th width="300">class</th>
+            <th width="300">no. of person(Frequency)</th>
+            <th width="300">Cumulative frequency Less than</th>
+        </tr>
+        <tr>
+        <td>Less than 10</td>
+        <td align="center">0-10</td>
+        <td align="right">3</td>
+        <td align="center">3</td>   
+        </tr>
+        <tr>
+            <td>Less than 20</td>
+            <td align="center">10-20</td>
+            <td align="right">10 - 3 = 7</td>
+            <td align="center">10</td>
+        </tr>
+        <tr>
+            <td>Less than 30</td>
+            <td align="center">20-30</td>
+            <td align="right">22 - 10 = 12</td>
+            <td align="center">22~cf</td>
+        </tr>
+        <tr> 
+            <td>Less than 40</td>
+            <td align="center">30-40</td>
+            <td align="right">40 - 22 = 18~f</td>
+            <td align="center" >40</td>
+        </tr>
+        <tr>
+            <td>Less than 50</td>
+            <td align="center">40-50</td>
+            <td align="right">54 - 40 = 14</td>
+            <td align="center">54</td>
+        </tr> 
+        <tr>
+            <td>Less than 60</td>
+            <td align="center">50-60</td>
+            <td align="right">71 - 54 = 17</td>
+            <td align="center">71</td>
+        </tr>
+    </table>
+    <br> <br> 
+    <hr align="left" width="612px" color="green">
+    <table border="2px">
+        <tr>
+            <th width="300"> Age (years)</th>
+            <th width="300"> No. of persons </th>
+        </tr>
+        <tr> 
+            <td> less than 10</td>
+            <td align="left"> 3 </td>
+        </tr>
+        <tr>
+            <td> less than 20 </td>
+            <td align="left"> 10 </td>
+        </tr>
+        <tr>
+            <td> Less than 30 </td>
+            <td align="left"> 22</td> 
+        </tr>
+        <tr>
+            <td> Less than 40 </td>
+            <td align="left"> 40 </td>
+        </tr> 
+        <tr>
+            <td> Less than 50 </td>
+            <td align="left"> 54 </td>
+        </tr>
+        <tr>
+            <td> Less than 60 </td>
+            <td align="left"> 71 </td>
+        </tr> 
+        
+      </table>
+    <hr align="center" width="612px" color="red">
+    <p><b>The given cumulative frequency table is of the 'less than' form.</b> So,
+        we will have to decide the true class limits first. We know that, the 'less
+        than' cumulative frequency is associated with the upper class limits. <i>The
+        upper class limit of the first class is 10.</i> The age of any person is a
+        positive number, so the first class must be 0-10. <u>The upper class limit
+        of the next class is 20, so the second class must be 10-20.</u> In this way,
+        make the classes of interval 10. In this way the last class is 50-60. So
+        <s> the given table can now be rewritten as follows</s> </p>
+    <hr align="right" width="1035px" color="blue">
+    <img src="image 5.jpg" height="300" width="400" />
+    <p align="left"> black panther </p> 
+
+    <hr align="left" width="6000px" color="brown"
+    <p><b> The following table shows the number of students and the time they utilized
+        daily for their studies. Find the mean time spent by students for their studies by
+        direct method.</b></p> 
+
+     <hr align="left" width="6000px" color="purple"
+     <p><i> In the following table, the toll paid by drivers and the number of vehicles is shown.
+            Find the mean of the toll by 'assumed mean' method </i></p> 
+
+     <hr align="left" width="6000px" color="orange"
+     <p><u> In the following table, the toll paid by drivers and the number of vehicles is shown.
+            Find the mean of the toll by 'assumed mean' method </u></p>
+            
+     <hr align="left" width="6000px" color="pink"
+     <p><s> A frequency distribution table for the production of oranges of some farm owners
+        is given below. Find the mean production of oranges by 'assumed mean' method. </s></p>        
 </body>
 </html>
