--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Practice table</table></title>  
 </head>    
 <body>
- 
+    <h1> Sayyed Afrid </h1>
     <table border="2px">
         <tr>
             <th width="300">age (year)</th>
